test/library/packages/UnrolledLinkedList/last/testLastHalt.good
testLastHalt.chpl:5: error: halt reached - Called "unrolledLinkedList.last" on an empty unrolledLinkedList.
