test/library/packages/UnrolledLinkedList/last/testLastHalt.chpl
private use UnrolledLinkedList;

var lst: unrolledLinkedList(int);

const elem = lst.last();
